--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,5 +1,22 @@
 <h1>New listing</h1>
 
-<%= render 'form' %>
+<%= form_for @listing do |f| %>
+
+	<div><%=f.label :name %><br>
+	<%= f.text_field :name %></div>
+
+	<select name='listing[category_id]'>
+  	</select>
+
+	<div><%=f.label :description %><br>
+	<%= f.text_field :description %></div>
+
+	<div><%=f.label :rate %><br>
+	<%= f.number_field :rate %></div>
+
+	<div><%= f.submit "Submit" %></div>
+
+
+<% end %>
 
 <%= link_to 'Back', listings_path %>
