--- a/app/views/replies/index.html.erb
+++ b/app/views/replies/index.html.erb
@@ -1,2 +1,7 @@
 <h1>Replies#index</h1>
 <p>Find me in app/views/replies/index.html.erb</p>
+
+
+<%= render 'index' %>
+
+<%= link_to 'Back', listing_bookings_path(@current_scope) %>
