--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
+      <th>Sender</th>
       <th>Listing</th>
       <th>Note</th>
       <th>Start date</th>
@@ -18,7 +18,7 @@
   <tbody>
     <% @bookings.each do |booking| %>
       <tr>
-        <td><%= booking.user_id %></td>
+        <td><%= booking.sender.username %></td>
         <td><%= booking.listing_id %></td>
         <td><%= booking.note %></td>
         <td><%= booking.start_date %></td>
