--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -32,6 +32,8 @@
       <%= form_for [@listing, @booking] do |f| %>
           <%= f.label :note %>
           <%= f.text_field :note %>
+          <%= f.date_select :start_date %>
+          <%= f.date_select :end_date %>
           <%= f.submit 'Send' %>
       <% end %>
     <% else %>
