--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -14,6 +14,15 @@
 	<div><%=f.label :rate %><br>
 	<%= f.number_field :rate %></div>
 
+	<% puts :listing_photos %>
+
+ 	<%= f.fields_for(:listing_images) do |photo| %>
+	    <div class="field">
+	      <%= photo.label :image %><br />
+	      <%= photo.file_field :image %>
+	    </div>
+ 	<% end %>
+
 	<div><%= f.submit "Submit" %></div>
 
 
