--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,6 +1,17 @@
 <h1>New listing</h1>
 
 <%= form_for @listing do |f| %>
+	<% if @listing.errors.any? %>
+	<div id="error_explanation">
+	  <h2><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
+
+	  <ul>
+	  <% @listing.errors.full_messages.each do |msg| %>
+	    <li><%= msg %></li>
+	  <% end %>
+	  </ul>
+	</div>
+	<% end %>
 
 	<div><%=f.label :name %><br>
 	<%= f.text_field :name %></div>
@@ -13,8 +24,6 @@
 
 	<div><%=f.label :rate %><br>
 	<%= f.number_field :rate %></div>
-
-	<% puts :listing_photos %>
 
  	<%= f.fields_for(:listing_images) do |photo| %>
 	    <div class="field">
