Changed booking to have state

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -23,7 +23,7 @@
         <td><%= booking.note %></td>
         <td><%= booking.start_date %></td>
         <td><%= booking.end_date %></td>
-        <td><%= booking.accepted %></td>
+        <td><%= booking.accepted_at %></td>
         <td><%= link_to 'Show', booking %></td>
         <td><%= link_to 'Edit', edit_booking_path(booking) %></td>
         <td><%= link_to 'Destroy', booking, method: :delete, data: { confirm: 'Are you sure?' } %></td>
