Added cell view for notifications

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -40,7 +40,8 @@
 </p>
 
 <p>
-  <% if (current_user.has_wepay_account? && current_user == @booking.recipient) %>
+  <%# if (current_user.has_wepay_account? && current_user == @booking.recipient) %>
+  <% if (current_user == @booking.sender && @booking.state == 'accepted')%>
   <br />
   <%= link_to "Confirm with credit card!", "/bookings/pay/#{@booking.id}", :class => 'btn btn-danger btn-large', :id => 'buy-now-button' %>
   <% end %>
