--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= render_cell :notifications, :index, :user => current_user %>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <% if current_user%>
