--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :category %><br>
-    <%= f.text_field :category %>
+    <%= f.select :category, Listing.categories.map {|value| [value, value] } %>
   </div>
   <div class="field">
     <%= f.label :name %><br>
