--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,12 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+	<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500|Lato:300,400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <%= render_cell :notifications, :index, :user => current_user %>
+  <%= render :partial => 'layouts/navbar' %>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
-  <% if current_user%>
-     <%= current_user.username %>
-  <% end %>
 
 
 <%= yield %>
