Listing show bootstrap and date picker

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -12,6 +12,7 @@ $scenius-off-white: rgb(240, 250, 244);
 .navbar {
 	background-color: $scenius-off-white;
 	padding: 10px 0px;
+	box-shadow: 0px 2px 2px rgba(0,0,0,1);
 }
 
 a:hover{
