Bootstrapping notifications and user page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user-heading{
+	padding: 0px 40px;
+}
+
+.user-heading-floated{
+	float: left;
+	padding: 0px 5px;
+}
