--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>From:</strong>
-  <%= @booking.sender.username %>
+  <%= @booking.sender.name %>
 </p>
 
 <p>
   <strong>To:</strong>
-  <%= @booking.recipient.username %>
+  <%= @booking.recipient.name %>
 </p>
 
 <p>
