--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -2,6 +2,13 @@ $scenius-green: rgb(40, 197, 97);
 $scenius-alt-green: #1D9C4B;
 $scenius-off-white: rgb(240, 250, 244);
 
+
+.body-wrapper {
+	height: 100%;
+	width: 100%;
+	padding-top: 50px;
+}
+
 .navbar-brand {
 	font-family: 'Ubuntu', sans-serif;
 	color: $scenius-green;
@@ -54,4 +61,9 @@ body {
   font-weight: bold;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.26);
   -webkit-font-smoothing: antialiased;
+}
+
+.nav-avatar{
+	height: 50px;
+	width: 50px;
 }
