--- a/app/cells/notifications/index.html.erb
+++ b/app/cells/notifications/index.html.erb
@@ -5,4 +5,15 @@
 </p>
 
  -->
- <%= link_to pluralize(@notifications.length, 'alert'), @user %> 
+
+ <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+    	<span style='font-size: 160%; margin-top: -7px; color: orange;' class='glyphicon glyphicon-bell'></span><span class='badge' style='background-color: orange;'><%= @notifications.length.to_s %></span>
+    </a>
+    <ul class="dropdown-menu">
+    	<% @notifications.each do |notification| %>
+      		<li><%= link_to raw(notification.title + "<br>" + notification.body), notification.notifiable %>
+      		</li>
+      	<% end %>
+    </ul>
+</li>
