--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -11,34 +11,36 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :category %><br>
-    <%= f.select :category, Listing.categories.map {|value| [value, value] } %>
-  </div>
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :rate %><br>
-    <%= f.text_field :rate %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </div>
+  <div class="panel panel-default">
+    <div class="field">
+      <%= f.label :user_id %><br>
+      <%= f.number_field :user_id %>
+    </div>
+    <div class="field">
+      <%= f.label :category %><br>
+      <%= f.select :category, Listing.categories.map {|value| [value, value] } %>
+    </div>
+    <div class="field">
+      <%= f.label :name %><br>
+      <%= f.text_field :name %>
+    </div>
+    <div class="field">
+      <%= f.label :rate %><br>
+      <%= f.text_field :rate %>
+    </div>
+    <div class="field">
+      <%= f.label :description %><br>
+      <%= f.text_area :description %>
+    </div>
 
-  <%= f.fields_for(:listing_images) do |photo| %>
-      <div class="field">
-        <%= photo.label :image %><br />
-        <%= photo.file_field :image %>
-      </div>
-  <% end %>
-  <div class="actions">
-    <%= f.submit %>
+    <%= f.fields_for(:listing_images) do |photo| %>
+        <div class="field">
+          <%= photo.label :image %><br />
+          <%= photo.file_field :image %>
+        </div>
+    <% end %>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
   </div>
 <% end %>
