--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,40 +1,52 @@
-<h1>New listing</h1>
+<div class="row">
+	<div class="col-sm-10 col-sm-offset-1">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<center>
+					<h1>New Listing</h1>
+				</center>
+			</div>
+			<div class="panel-body">
+				<%= form_for @listing, :html => {:class => "listing-form"} do |f| %>
+					<% if @listing.errors.any? %>
+					<div id="error_explanation">
+					  <h2><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
 
-<%= form_for @listing do |f| %>
-	<% if @listing.errors.any? %>
-	<div id="error_explanation">
-	  <h2><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
+					  <ul>
+					  <% @listing.errors.full_messages.each do |msg| %>
+					    <li><%= msg %></li>
+					  <% end %>
+					  </ul>
+					</div>
+					<% end %>
 
-	  <ul>
-	  <% @listing.errors.full_messages.each do |msg| %>
-	    <li><%= msg %></li>
-	  <% end %>
-	  </ul>
+					<div class="form-group"><%=f.label :name %>
+					<%= f.text_field :name, :class => "form-control" %></div>
+
+					<div class="form-group"><%= f.label :category %>
+					<%= f.select :category, options_for_select(Listing.categories.map {|value| [value, value] }),{}, :class => "form-control" %></div>
+
+					<div class="form-group">
+					<%=f.label :rate %><br>
+					<%= f.number_field :rate, :class => "form-control" %></div>
+
+					<div class="form-field"><%=f.label :description %><br>
+					<%= f.text_field :description, :class => "form-control" %></div>
+
+				 	<%= f.fields_for(:listing_images) do |photo| %>
+					    <div class="field">
+					      <%= photo.label :image %><br />
+					      <%= photo.file_field :image %>
+					    </div>
+				 	<% end %>
+
+					<div><%= f.submit "Submit", :class => "btn btn-scenius form-control" %></div>
+
+
+				<% end %>
+			</div>
+		</div>
 	</div>
-	<% end %>
-
-	<div><%=f.label :name %><br>
-	<%= f.text_field :name %></div>
-
-	<div><%= f.label :category %><br>
-	<%= f.select :category, Listing.categories.map {|value| [value, value] } %></div>
-
-	<div><%=f.label :description %><br>
-	<%= f.text_field :description %></div>
-
-	<div><%=f.label :rate %><br>
-	<%= f.number_field :rate %></div>
-
- 	<%= f.fields_for(:listing_images) do |photo| %>
-	    <div class="field">
-	      <%= photo.label :image %><br />
-	      <%= photo.file_field :image %>
-	    </div>
- 	<% end %>
-
-	<div><%= f.submit "Submit" %></div>
-
-
-<% end %>
+</div>
 
 <%= link_to 'Back', listings_path %>
