--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,26 +1,52 @@
-<h2>Sign up</h2>
+<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-sm-10 col-sm-offset-1">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <center>
+          <h2>Get Started With Scenius</h2>
+        </center>
+      </div>
+      <div class="panel-body">
+        <center>
+          <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => "scenius-form"}) do |f| %>
+          <br>
+          <%= link_to user_omniauth_authorize_path(:facebook), :class => "btn btn-block btn-facebook" do %>
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-square fa-stack-2x"></i>
+              <i class="fa fa-facebook fa-stack-1x fa-inverse facebook"></i>
+            </span>&nbsp; <b>Sign up with Facebook</b>
+          <% end %>
+          <br>
+          <b>or sign up with email...</b>
+          <br>
+          <br>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+          <%= devise_error_messages! %>
 
-  <div><%= f.label :name %><br />
-  <%= f.text_field :name, :autofocus => true %></div>
+          <div class="form-group"><%= f.label :name %><br />
+          <%= f.text_field :name, :autofocus => true, :class => "form-control" %></div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+          <div class="form-group"><%= f.label :email %><br />
+          <%= f.email_field :email, :class => "form-control" %></div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+          <div class="form-group"><%= f.label :password %><br />
+          <%= f.password_field :password, :class => "form-control" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+          <div class="form-group"><%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, :class => "form-control" %></div>
 
-  <div>
-    <%= f.label :avatar %><br />
-    <%= f.file_field :avatar %>
+          <div class="form-group">
+            <%= f.label :avatar %><br />
+            <%= f.file_field :avatar, :class => "well" %>
+          </div>
+
+          <div class="form-group"><%= f.submit "Sign up", :class => "btn btn-scenius form-control" %></div>
+        <% end %>
+
+        <%= render "devise/shared/links" %>
+      </center>
+      </div>
+    </div>
   </div>
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
