--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,29 +1,30 @@
 <div class="navbar navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Scenius IO</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <div class="pull-right">
-            <ul class="nav navbar-nav">
-              <% if current_user %>
-                <li><%= image_tag current_user.fetch_avatar, :class => 'img-circle nav-avatar'%></li>
-                <li><%= link_to current_user.name, current_user %></li>
-                <li><%= render_cell :notifications, :index, :user => current_user%></li>
-                <li><%= link_to 'My Gear', listings_path(@user) %> </li>
-                <li><%= link_to 'My Bookings', bookings_path(@user) %> </li>
-              <% else %>
-                <li><a href="/users/sign_in">Login</a></li>
-                <li><a href="/users/sign_up">Sign Up</a></li>
-              <% end %>
-            </ul>
-          </div>
-        </div><!--/.nav-collapse -->
-      </div>
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">Scenius IO</a>
     </div>
+    <div class="collapse navbar-collapse">
+      <div class="pull-right">
+        <ul class="nav navbar-nav">
+          <% if current_user %>
+            <li><%= image_tag current_user.fetch_avatar, :class => 'img-circle nav-avatar'%></li>
+            <li><%= link_to current_user.name, current_user %></li>
+            <li><%= render_cell :notifications, :index, :user => current_user%></li>
+            <li><%= link_to 'My Gear', listings_path(@user) %> </li>
+            <li><%= link_to 'My Bookings', bookings_path(@user) %> </li>
+            <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
+          <% else %>
+            <li><a href="/users/sign_in">Login</a></li>
+            <li><a href="/users/sign_up">Sign Up</a></li>
+          <% end %>
+        </ul>
+      </div>
+    </div><!--/.nav-collapse -->
+  </div>
+</div>
