--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -7,7 +7,7 @@
 				</center>
 			</div>
 			<div class="panel-body">
-				<%= form_for @listing, :html => {:class => "listing-form"} do |f| %>
+				<%= form_for @listing, :html => {:class => "scenius-form"} do |f| %>
 					<% if @listing.errors.any? %>
 					<div id="error_explanation">
 					  <h2><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
