--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 			<div class="panel-heading user-heading">
 				<div class="row">
 					<div class="user-heading-floated">
-						<h2><%= image_tag current_user.fetch_avatar, :class => 'img-circle'%></h2>
+						<h2><%= image_tag @user.fetch_avatar, :class => 'img-circle'%></h2>
 					</div>
 					<div class="user-heading-floated">
 						<h3><%= @user.name %></h3>
@@ -21,6 +21,12 @@
 				<div class="row">
 					<div class="col-sm-3">
 						<p>
+							Joined <%= time_ago_in_words(@user.created_at) %> ago.
+						</p>
+					</div>
+
+					<div class="col-sm-3">
+						<p>
 							<%= @user.listings.length %> items on Scenius.
 						</p>
 					</div>
@@ -34,12 +40,6 @@
 					<div class="col-sm-3">
 						<p>
 							<%= @user.requested_bookings.where(:state => 'completed').length %> items rented to Sceniuses.
-						</p>
-					</div>
-
-					<div class="col-sm-3">
-						<p>
-							Joined <%= time_ago_in_words(@user.created_at) %> ago.
 						</p>
 					</div>
 				</div>
