--- a/app/cells/notifications/index.html.erb
+++ b/app/cells/notifications/index.html.erb
@@ -7,7 +7,7 @@
  -->
 
  <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+    <a href="#" id="notifications" class="dropdown-toggle" data-toggle="dropdown">
     	<span style='font-size: 160%; margin-top: -7px; color: orange;' class='glyphicon glyphicon-bell'></span><span class='badge' style='background-color: orange;'><%= @notifications.length.to_s %></span>
     </a>
     <ul class="dropdown-menu">
