--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,4 @@
+<%= @total_unread_notifications = current_user.notifications.where(viewed: false).length if current_user %>
 <div class="navbar navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
@@ -15,7 +16,13 @@
           <% if current_user %>
             <li><%= image_tag current_user.fetch_avatar, :class => 'img-circle nav-avatar'%></li>
             <li><%= link_to current_user.name, current_user %></li>
-            <li><%= render_cell :notifications, :index, :user => current_user%></li>
+            <li class="dropdown">
+              <a href="#" id="notifications" class="dropdown-toggle" data-toggle="dropdown">
+                <%= render :partial => '/layouts/notifications_bell' %>
+              </a>
+              <ul id="notifications-dropdown" class="dropdown-menu">
+              </ul>
+            </li>
             <li><%= link_to 'My Gear', listings_path(@user) %> </li>
             <li><%= link_to 'My Bookings', bookings_path(@user) %> </li>
             <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
