--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -4,6 +4,9 @@
     $('#booking_start_date, #booking_end_date').change(function(){
       window.scenius.calculatePrice();
     });
+    $('#cc-submit').click(function(){
+      window.scenius.tokenizeCard();
+    });
   })
 </script>
 
@@ -95,6 +98,25 @@
                               <%= f.submit 'Send', :class => 'form-control btn-scenius' %>
                             </div>
                         <% end %>
+
+                        <!-- Credit card form -->
+
+                        <form id="credit-card-form" role="form">
+                          <div class="form-group">
+                            <label>Card Number</label>
+                            <input type="text" id="cc-number" class="form-control" autocomplete="off" placeholder="4111111111111111" maxlength="16" />
+                          </div>
+                          <div class="form-group">
+                                <label>Expiration</label>
+                                <input type="text" id="cc-em" class="form-control" autocomplete="off" placeholder="01" maxlength="2" />
+                                 <input type="text" id="cc-ey" class="form-control" autocomplete="off" placeholder="2013" maxlength="4" />
+                          </div>
+                          <div class="form-group">
+                                <label>Security Code (CSC)</label>
+                                <input type="text" id="cc-csc" class="form-control" autocomplete="off" placeholder="453" maxlength="4" />
+                          </div>
+                          <a id="cc-submit" class="btn btn-large btn-primary pull-right">Submit</a>
+                        </form>
                       <% else %>
                         <strong> Booking Request Sent</strong><br>
                         <%= link_to "View", @booking %>
